--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "ethos",
   "version": "0.0.0",
-  "description": "",
+  "description": "Ethereum Browser",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "coffee server.coffee"
   },
-  "author": "",
-  "license": "NONE"
+  "author": "Doug A.",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.8.4"
+  },
+  "devDependencies": {}
 }
