--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Ethos",
-  "version": "0.0.0",
+  "version": "0.0.3",
   "description": "Ethereum Browser",
   "main": "app://ethos/static/bootstrap.html",
   "node-main": "./lib/server.js",
@@ -15,10 +15,12 @@
     "min_width": 300,
     "min_height": 200
   },
-  "inject-js-start": "assets/inject.bundle.js",
+  "inject-js-start": "./static/assets/inject.bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "nwbuild -p osx,win -o ./build ."
+    "build": "npm install && npm run compile && coffee ./build/build.coffee",
+    "build-dev": "npm run compile && nwbuild -r .",
+    "compile": "browserify ./lib/inject.js > ./static/assets/inject.bundle.js"
   },
   "repository":{
     "type":"git",
@@ -34,6 +36,7 @@
     "jade": "~1.5.0"
   },
   "devDependencies": {
-    "node-webkit-builder": "~0.1.1"
+    "node-webkit-builder": "~0.1.1",
+    "browserify": "~5.10.0"
   }
 }
