Attempting to fix build on OSX
`npm run build-dev` works but full build does not run

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "coffee ./lib/server.coffee",
-    "build": "npm install && npm run compile && coffee ./build/build.coffee",
+    "build": "npm install && rm -r ./build/Ethos* && npm run compile && coffee ./build/build.coffee",
     "build-dev": "npm run compile && nwbuild -r .",
     "compile": "browserify ./lib/inject.js > ./static/assets/inject.bundle.js"
   },
